# easyqt

./: CMakeLists.txt  Config.cmake.in
include/easyqt/: bitfield.h  datastorage.h  debug.h  easyqt_global.h  enum.h  file.h  json.h  lazypointer.h  logger.h  logoutput.h  logpart.h  metatyperegisterer.h  parser.h  preferences.h  qobject_helper.h  resourcetype.h  singleton.h  slotreceiver.h  writefilemode.h
include/easyqt/communication/: dataparseerror.h  dataparseresult.h
include/easyqt/communication/commands/: chargingstationcommands.h  command.h  commandheader.h  controllercommands.h  davroscommandheader.h  genericcommand.h  idbasedheader.h  stm32commands.h
include/easyqt/communication/core/: abstractcommanddatastreamer.h  abstractcommandsqueue.h  abstractcommunicationinterface.h  abstractdevicecommandsqueue.h  abstractsimulatedcommandsqueue.h  commanddatatype.h
include/easyqt/communication/datastreams/: abstractchannelhandler.h  abstractdatastreamprovider.h  blepseudosocket.h  bluetoothclient.h  bluetoothclientstate.h  bluetoothpairedclient.h  bluetoothpairedserver.h  bluetoothserver.h  channelhandlerble.h  channelhandlermode.h  channelhandlerstate.h  channelhandlertcp.h  serialportclient.h  serialportserver.h  tcpserver.h
include/easyqt/communication/datastreams/discovery/: abstractdevicediscoverer.h  devicediscovererble.h  devicediscovererlocalnetwork.h
src/: bitfield.cpp  datastorage.cpp  debug.cpp  file.cpp  json.cpp  logger.cpp  parser.cpp  preferences.cpp  slotreceiver.cpp
src/communication/commands/: command.cpp  commandheader.cpp  idbasedheader.cpp
src/communication/core/: abstractcommanddatastreamer.cpp  abstractcommandsqueue.cpp  abstractcommunicationinterface.cpp  abstractdevicecommandsqueue.cpp  abstractsimulatedcommandsqueue.cpp
src/communication/datastreams/: abstractchannelhandler.cpp  abstractdatastreamprovider.cpp  blepseudosocket.cpp  bluetoothclient.cpp  bluetoothpairedclient.cpp  bluetoothpairedserver.cpp  bluetoothserver.cpp  channelhandlerble.cpp  channelhandlertcp.cpp  serialportclient.cpp  serialportserver.cpp  tcpserver.cpp
src/communication/datastreams/discovery/: abstractdevicediscoverer.cpp  devicediscovererble.cpp  devicediscovererlocalnetwork.cpp
